--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-parse": "^2.4.5",
     "uuid": "^13.0.0"
   }
 }
